--- a/packages/cypress-mock-openapi/package.json
+++ b/packages/cypress-mock-openapi/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@heetch/cypress-mock-openapi",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Cypress command to stub network requests using OpenAPI examples",
   "main": "index.js",
   "repository": "https://github.com/heetch/frontend-tools",
   "author": "Heetch",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "cypress": "^6.0.1"
+  }
 }
