--- a/packages/cypress-mock-openapi/package.json
+++ b/packages/cypress-mock-openapi/package.json
@@ -8,5 +8,9 @@
   "license": "MIT",
   "scripts": {
     "test": "cypress run"
+  },
+  "dependencies": {
+    "@stoplight/prism-cli": "^4.1.2",
+    "@stoplight/prism-http": "^4.1.2"
   }
 }
