--- a/package.json
+++ b/package.json
@@ -4,7 +4,22 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "lint": "eslint --config=.eslintrc 'packages/**/*.js'",
+    "lint-fix": "eslint --config=.eslintrc 'packages/**/*.js' --fix",
+    "prettier": "prettier --check 'packages/**/*.js'"
+  },
   "devDependencies": {
+    "copyfiles": "^2.4.1",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "lerna": "^3.22.1",
     "prettier": "^2.2.1"
   }
