--- a/packages/cypress-mock-openapi/package.json
+++ b/packages/cypress-mock-openapi/package.json
@@ -2,11 +2,13 @@
   "name": "@heetch/cypress-mock-openapi",
   "version": "0.0.0",
   "description": "Cypress command to stub network requests using OpenAPI examples",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "repository": "https://github.com/heetch/frontend-tools",
   "author": "Heetch",
   "license": "MIT",
   "scripts": {
+    "build": "copyfiles -f ./src/*.js ./dist",
+    "prepare": "npm run build",
     "test": "start-test 8080 'cypress run'",
     "test:open": "start-test 8080 'cypress open'",
     "start": "http-server ./test"
