Add lint step to workflow

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,6 +9,10 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v1
 
+      - name: Linting
+        with:
+          command: yarn lint
+
       - name: cypress-mock-openapi
         uses: cypress-io/github-action@v2
         with:
