--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,9 +9,11 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v1
 
-      - name: Linting
-        with:
-          command: yarn lint
+      - name: Install workspace modules
+        run: yarn
+
+      - name: Run eslint and prettier
+        run: yarn lint
 
       - name: cypress-mock-openapi
         uses: cypress-io/github-action@v2
