--- a/packages/cypress-mock-openapi/package.json
+++ b/packages/cypress-mock-openapi/package.json
@@ -11,7 +11,7 @@
     "prepare": "npm run build",
     "test": "start-test 8080 'cypress run'",
     "test:open": "start-test 8080 'cypress open'",
-    "start": "http-server ./test"
+    "start": "json-server --port 8080 ./test/json/db.json --static ./test/public"
   },
   "dependencies": {
     "@stoplight/prism-cli": "^4.1.2",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "cypress": "^6.0.1",
     "http-server": "^0.12.3",
+    "json-server": "^0.16.3",
     "start-server-and-test": "^1.11.6"
   }
 }
