Validate and report response violations
Validate requests and throw error with violations

Return a response for a successful validation

Format general violation errors

Add JSDoc, package readme

Update docs

Update docs

Update readme

Add header support to validateWithOpenAPI

Add readme to cypress package

Update readme

Run tests before deployment

Update gitignore

Add deploy script

Clean up repo

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "packages/*"
   ],
   "scripts": {
+    "deploy": "lerna publish",
     "lint": "eslint --config=.eslintrc 'packages/**/*.js'",
     "lint-fix": "eslint --config=.eslintrc 'packages/**/*.js' --fix",
     "prettier": "prettier --check 'packages/**/*.js'"
