--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
   "jsxSingleQuote": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "arrowParens": "avoid"
+  "trailingComma": "all"
 }
