--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "no-prototype-builtins": 0
+    "no-prototype-builtins": 0,
+    "arrow-parens": 0
   }
 }
