--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,6 @@
   "rules": {
     "prettier/prettier": "error",
     "no-prototype-builtins": 0,
-    "arrow-parens": 0
+    "no-param-reassign": 0
   }
 }
