--- a/packages/cypress-mock-openapi/package.json
+++ b/packages/cypress-mock-openapi/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "copyfiles -f ./src/*.js ./dist",
-    "prepare": "npm run build",
+    "prepare": "yarn test && npm run build",
     "test": "start-test 8080 'cypress run'",
     "test:open": "start-test 8080 'cypress open'",
     "start": "json-server --port 8080 ./test/json/db.json --static ./test/public"
