--- a/packages/cypress-mock-openapi/package.json
+++ b/packages/cypress-mock-openapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heetch/cypress-mock-openapi",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Cypress command to stub network requests using OpenAPI examples",
   "main": "./dist/index.js",
   "repository": "https://github.com/heetch/frontend-tools",
