--- a/packages/cypress-mock-openapi/package.json
+++ b/packages/cypress-mock-openapi/package.json
@@ -21,5 +21,11 @@
     "cypress": "^6.0.1",
     "json-server": "^0.16.3",
     "start-server-and-test": "^1.11.6"
+  },
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
