--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint-fix": "eslint --config=.eslintrc 'packages/**/*.js' --fix",
     "prettier": "prettier --check 'packages/**/*.js'"
   },
+  "dependencies": {
+    "@stoplight/prism-cli": "^4.1.2",
+    "@stoplight/prism-http": "^4.1.2"
+  },
   "devDependencies": {
     "copyfiles": "^2.4.1",
     "eslint": "^7.15.0",
