React packages build system + react-code and react-form-validation packages

--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,7 @@
   "packages": [
     "packages/*"
   ],
+  "stream": true,
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent"
