--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,33 @@
 {
-  "extends": ["airbnb", "airbnb/hooks", "plugin:prettier/recommended", "plugin:cypress/recommended"],
+  "extends": [
+    "airbnb",
+    "airbnb/hooks",
+    "plugin:prettier/recommended",
+    "plugin:cypress/recommended",
+    "prettier/react"
+  ],
   "env": {
     "browser": false,
     "es6": true,
     "cypress/globals": true
   },
-  "plugins": ["prettier", "cypress"],
+  "plugins": ["react", "react-hooks", "prettier", "cypress"],
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 2020,
     "sourceType": "module"
   },
   "rules": {
     "prettier/prettier": "error",
     "no-prototype-builtins": 0,
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "import/prefer-default-export": 0,
+    "import/no-default-export": 0,
+    "react/jsx-filename-extension": 0,
+    "react/react-in-jsx-scope": 0,
+    "react/require-default-props": 0,
+    "react/jsx-props-no-spreading": 0
   }
 }
