--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "resolutions": {
+    "handlebars": "^4.7.7"
   }
 }
